# cos-360-unrestricted-optimization

./: .gitignore  CMakeLists.txt
ext/gtest/: CMakeLists.txt
src/: Makefile  lib.hpp  lib2.cpp  lib2.hpp  main.cpp
test/: mainTest.cpp
